2019-03-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/xwindow.c (MagickXGetWindowInfo): Deal with the unlikely
	case that the memory allocation for window->segment_info
	fails. Fixes SourceForge #595 "use allocate memory before null
	check" as pertains to magick/xwindow.c.

	* magick/segment.c (Classify): Add check for memory allocation failure when allocating cluster array. Fixes SourceForge #595 "use allocate memory before
	null check" as pertains to magick/segment.c.

	* coders/pdb.c (ReadPDBImage): Fix use of allocated memory before
	null check.  Fixes SourceForge #595 "use allocate memory before
	null check" as pertains to coders/pdb.c.

2019-03-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (AllocateThreadViewSet): Simplify the image
	view model by adding NexusInfo to the View structure (rather than
	referencing it via a pointer) to lessen the number of required
	per-thread allocations and to improve locality of reference.

2019-03-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/wpg.c (WPG1_Palette): Change to a static declaration.

	* coders/dcm.c: dicom_info array is now fully in the data segment.

2019-03-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Add support for using the Solaris mtmalloc
	library.  This is primarily for testing or as an alternative to
	Solaris umem.
	Stop using posix_memalign() until it is uniformly more mature and
	reliably quick.

2019-03-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (SetNexus): Smallest staging-area
	allocation is cache line size so declare it as such.

	* magick/fx.c: Functions in the fx module which return a new Image
	should return a null Image if an exception was thrown.  Also,
	assure that user has an opportunity to see the exception which was
	thrown.

	* magick/error.c (ThrowLoggedException): Throwing an exception is
	now thread-safe.

	* magick/pixel_cache-private.h: Moved pixel cache private